--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
-    <<h1>Hello 1st Git</h1>
+    <h1>Hello 1st Git</h1>
+    <p>New Branch Login</p>
   </body>
 </html>
